# budgie-performance-gauge-applet

./: .gitignore  LICENSE  README.md  meson.build  meson_post_install.py
src/: Applet.vala  AppletSettings.vala  BudgiePerformanceGaugeApplet.plugin  GaugeWidget.vala  Monitor.vala  NativeUtils.cpp  Utils.cpp  com.github.akiramiyakoda.budgie-performance-gauge-applet.gschema.xml  meson.build
